# AoC2024

./: .gitignore  new_day.sh
day01/: CMakeLists.txt  main.cpp  solution.cpp  solution.hpp
day01/test/: test.cpp
day02/: CMakeLists.txt  solution.cpp
day02/test/: test.cpp
day03/: CMakeLists.txt  main.cpp  solution.cpp
day03/test/: test.cpp
day04/: CMakeLists.txt  solution.cpp
day04/test/: test.cpp
day05/: CMakeLists.txt  solution.cpp  solution.hpp
day05/test/: test.cpp
day06/: CMakeLists.txt  solution.cpp  solution.hpp
day06/test/: test.cpp
day07/: CMakeLists.txt  build.sh  solution.cpp  solution.hpp
day07/test/: test.cpp
day09/: CMakeLists.txt  solution.cpp  solution.hpp
day09/test/: test.cpp
day10/: CMakeLists.txt  solution.cpp
day10/test/: test.cpp
day11/: CMakeLists.txt  solution.cpp  solution.hpp
day11/test/: test.cpp
day12/: CMakeLists.txt  solution.cpp
template/: test.cpp
